--- a/Theme/StyleButton.xaml
+++ b/Theme/StyleButton.xaml
@@ -25,12 +25,12 @@
         <Setter Property="Foreground" 
                 Value="{DynamicResource StyleColorForground}"/>
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="10"/>
-        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Width" Value="120"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
