--- a/Theme/StyleCheckBox.xaml
+++ b/Theme/StyleCheckBox.xaml
@@ -42,6 +42,8 @@
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Width" Value="180"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Foreground" 
                 Value="{DynamicResource StyleColorForground}"/>
