--- a/Theme/StyleTextBox.xaml
+++ b/Theme/StyleTextBox.xaml
@@ -14,11 +14,13 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Width" Value="180"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         
-        <Setter Property="Margin" Value="0,10,0,10"/>
+        <!--<Setter Property="Margin" Value="0,10,0,10"/>-->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
