--- a/Theme/StyleSlider.xaml
+++ b/Theme/StyleSlider.xaml
@@ -637,10 +637,11 @@
         <Setter Property="IsSnapToTickEnabled" Value="True"/>
         <Setter Property="Value" Value="3"/>
         <Setter Property="AutoToolTipPlacement" Value="None"/>
-        <Setter Property="Width" Value="180"/>
-        <Setter Property="Height" Value="25"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="center"/>
+        <!--<Setter Property="Width" Value="180"/>
+        <Setter Property="Height" Value="25"/>-->
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="5,15,5,15"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Slider}">
