--- a/Theme/StyleTextBlock.xaml
+++ b/Theme/StyleTextBlock.xaml
@@ -5,10 +5,11 @@
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="TextTrimming" Value="None"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Height" Value="25"/>
-        <Setter Property="Width" Value="60"/>
-        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="5,15,5,15"/>
+        <!--<Setter Property="Height" Value="25"/>
+        <Setter Property="Width" Value="90"/>-->
+        <Setter Property="FontSize" Value="12"/>
         <Setter Property="TextAlignment" Value="Center"/>
         <Setter Property="Foreground" 
                 Value="{DynamicResource StyleColorForground}"/>
