--- a/Theme/StyleCaptionButton.xaml
+++ b/Theme/StyleCaptionButton.xaml
@@ -19,7 +19,7 @@
         <Setter Property="Padding" Value="1"/>
         <Setter Property="Height" Value="20"/>
         <Setter Property="Width" Value="20"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
         <Setter Property="Template">
             <Setter.Value>
