--- a/Theme/StyleColor.xaml
+++ b/Theme/StyleColor.xaml
@@ -1,22 +1,37 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Theme">
-    <SolidColorBrush x:Key="StyleColorWindowBackground" Color="#FF2B2727"/>
-    <SolidColorBrush x:Key="StyleColorControlsBackground" Color="DarkGray"/>
-    <SolidColorBrush x:Key="StyleColorControlsBackground2" Color="#FF665E5E"/>
+    <LinearGradientBrush x:Key="StyleColorWindowBackground"
+                         StartPoint="0,0"
+                         EndPoint="1,0">
+        <GradientStop Color="#FF303030" Offset="0"/>
+        <GradientStop Color="#FF1A1A1A" Offset="1"/>
+
+    </LinearGradientBrush>
+    <LinearGradientBrush x:Key="StyleColorControlsBackground"
+                         StartPoint="0,0"
+                         EndPoint="1,0">
+        <GradientStop Color="#FF857474" Offset="0"/>
+        <GradientStop Color="#FF5B4E4E" Offset="1"/>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="StyleColorControlsBackground2"
+                         StartPoint="0,0"
+                         EndPoint="1,0">
+        <GradientStop Color="#FF3E292A" Offset="0"/>
+        <GradientStop Color="#FF2E2121" Offset="1"/>
+
+    </LinearGradientBrush>
     <SolidColorBrush x:Key="StyleColorWindowTitle" Color="Green"/>
-    <SolidColorBrush x:Key="StyleColorButtonsBackground" Color="#FF09F709"/>
-    <SolidColorBrush x:Key="StyleColorUserControlsBackground" 
-                     Color="#FF571F1F"/>
+    <SolidColorBrush x:Key="StyleColorButtonsBackground" Color="#FF8CC044"/>
+    
     <SolidColorBrush x:Key="StyleColorForground" Color="White"/>
-    <SolidColorBrush x:Key="StyleColorButtonBorder" Color="Green"/>
+    <SolidColorBrush x:Key="StyleColorButtonBorder" Color="#FF3E551F"/>
     <LinearGradientBrush x:Key="StyleGradientColor" 
                          StartPoint="0,0" 
                          EndPoint="1,0">
-        <GradientStop Color="#FF571F1F" Offset="0.801"/>
-        <GradientStop Color="#FF7C2E2E" Offset="0.6"/>
-        <GradientStop Color="#FFA84040" Offset="0.3"/>
-        <GradientStop Color="#FFCF4C4C" />
+        <GradientStop Color="#FF693737" Offset="0"/>
+        <GradientStop Color="#FF3E2626" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
