--- a/Theme/StyleMainWindow.xaml
+++ b/Theme/StyleMainWindow.xaml
@@ -6,6 +6,7 @@
         <Setter Property="Width" Value="950"/>
         <Setter Property="MinWidth" Value="680"/>
         <Setter Property="MinHeight" Value="360"/>
+        <Setter Property="MaxHeight" Value="735"/>
         <Setter Property="WindowStyle" Value="None"/>
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
@@ -25,7 +26,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="40"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Border Grid.Row="0" 
@@ -39,7 +40,7 @@
                         <ToggleButton x:Name="buttonMinimized" 
                                       Grid.Column="2" 
                                       Grid.Row="0" 
-                                      Margin="0,0,60,0" 
+                                      Margin="10,0,60,0" 
                                       Content="-" 
                                       VerticalContentAlignment="Bottom" 
                                       FontSize="20" 
@@ -51,7 +52,7 @@
                         <ToggleButton x:Name="buttonMaximized" 
                                       Grid.Column="2" 
                                       Grid.Row="0" 
-                                      Margin="0,0,35,0" 
+                                      Margin="10,0,35,0" 
                                       Content="#" 
                                       FontSize="14" 
                                       Foreground="{DynamicResource 
@@ -77,6 +78,7 @@
                                Foreground="{DynamicResource 
                             StyleColorButtonsBackground}"
                                VerticalContentAlignment="Center"
+                               Margin="15,0,0,0"
                                FontSize="12"/>
                        
                     </Grid>
